RESOLVED FIXED169564
Respect the runtime flag for WebGPU, default feature to off, and print a warning
https://bugs.webkit.org/show_bug.cgi?id=169564
Summary Respect the runtime flag for WebGPU, default feature to off, and print a warning
Dean Jackson
Reported 2017-03-13 13:45:33 PDT
Respect the runtime flag for WebGPU, default feature to off, and print a warning
Attachments
Patch (6.61 KB, patch)
2017-03-13 14:33 PDT, Dean Jackson
thorton: review+
Dean Jackson
Comment 1 2017-03-13 13:46:55 PDT
Dean Jackson
Comment 2 2017-03-13 14:33:31 PDT
Dean Jackson
Comment 3 2017-03-13 14:37:56 PDT
Note You need to log in before you can comment on or make changes to this bug.