Source/WebCore: Respect the runtime flag for WebGPU, default feature to off. https://bugs.webkit.org/show_bug.cgi?id=169564 <rdar://problems/31018864>

Reviewed by Tim Horton.

Make sure WebGPU respects its runtime feature flag. Also, since
this implementation doesn't validate content, it should default
to being disabled.

Test: fast/canvas/webgpu/webgpu-runtime-flag.html

* html/HTMLCanvasElement.cpp:
(WebCore::HTMLCanvasElement::getContext):
(WebCore::HTMLCanvasElement::getContextWebGPU):

Source/WebKit2:
Respect the runtime flag for WebGPU, default feature to off, and print a warning
https://bugs.webkit.org/show_bug.cgi?id=169564
<rdar://problems/31018864>

Reviewed by Tim Horton.

Make sure WebGPU respects its runtime feature flag. Also, since
this implementation doesn't validate content, it should default
to being disabled.

* Shared/WebPreferencesDefinitions.h:

LayoutTests:
Respect the runtime flag for WebGPU, default feature to off, and print a warning
https://bugs.webkit.org/show_bug.cgi?id=169564
<rdar://problem/31018864>

Reviewed by Tim Horton.

* fast/canvas/webgpu/webgpu-runtime-flag-expected.txt: Added.
* fast/canvas/webgpu/webgpu-runtime-flag.html: Added.

Canonical link: https://commits.webkit.org/186566@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213869 268f45cc-cd09-0410-ab3c-d52691b4dbfc